--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Your bot name</title>
+    <title>Compiler bot</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent">
@@ -50,8 +50,8 @@
     </div>
 </nav>
 <div class="heading">
-    <h1 class="display-5 title">It's time to use Bot in your server.</h1>
-    <p class="subtitle">Bot is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features auto-moderation, administration, music and much more!</p>
+    <h1 class="display-5 title">It's time to use Compiler in your server.</h1>
+    <p class="subtitle">Compiler bot is an extremely fast bot that can compile code from a range of languages <br />Compiler bot is free to use!</p>
     <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
     <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
     <br /><br /><br /><br /><br /><br />
